# CppLec4VM

./: .gitignore  CMakeLists.txt  README.md  env.cmake.example
app/: CMakeLists.txt  lec4vm.cpp
cmake/: CMakeLists.txt  ExportConfig.cmake.in  InstallConfig.cmake.in  deps.cmake
doc/: CMakeLists.txt
doc/coverage/test_VM/: index.html
doc/coverage/test_VM/coverage/root/GSoC/llvm-cov-proving/CppLec4VM/: index.html
doc/coverage/test_VM/coverage/root/GSoC/llvm-cov-proving/CppLec4VM/lib/Lec4VM/: Err.cpp.html  Err.hpp.html  VM.cpp.html  VM.hpp.html  index.html
doc/coverage/test_VM/coverage/root/GSoC/llvm-cov-proving/CppLec4VM/test/: index.html  test_VM.cpp.html  util.cpp.html  util.hpp.html
lib/: CMakeLists.txt
lib/Lec4VM/: Err.cpp  Err.hpp  VM.cpp  VM.hpp  cpp  hpp  lib.cpp  lib.hpp
test/: CMakeLists.txt  code1  code1.txt  code2  test_VM.cpp  util.hpp
